--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -1,180 +1,9 @@
 # 开发工具
 
-## 【生产力】工具箱
-
-### # He3
+## 【[VSCode](https://code.visualstudio.com)】工具集成
 
 ```markdown
-# 官网
-https://he3.app
-
-# 中文官网
-https://he3app.com/zh
-
-# 登录
-微信授权
-```
-
-#### * 下载应用
-
-```tex
-Ctrl + K → 搜索插件
-```
-
-#### * He3-插件
-
-```markdown
-# 收藏推荐
-文本比较           文本分析       文本提取器
-JSON格式化        JSON转XML      XML转JSON
-JSON转Java Bean  JSON转SQL模式   JSON表格转SQL
-```
-
-### # uTools
-
-```markdown
-# 官网
-https://u.tools
-
-# 登录
-微信授权
-
-# 使用方法如下
-```
-
-#### * 下载应用
-
-1. 点击 插件应用市场：
-
-![步骤1](..\imgs\01\Tools\uTools\image-20210309222530385.png)
-
-2. 搜索插件并下载：
-
-![步骤2](..\imgs\01\Tools\uTools\image-20210309223100726.png)
-
-#### * uTools-插件
-
-```markdown
-# 内网穿透
-https://github.com/lblblong/nat-utools
-安装步骤:
-1) 首先下载最新一个 release 中的 upx 插件文件
-   https://github.com/lblblong/nat-utools/releases
-2) 然后呼出 utools 输入框，将刚刚下载的 upx 插件拖入输入框安装即可
-3) 在 utools 输入框输入关键词即可打开内网穿透面板：nw，内网穿透
-```
-
-## 【节点连接】工具
-
-### # [MobaXterm](https://mobaxterm.mobatek.net)
-
-```markdown
-# 下载地址(Windows版)
-https://mobaxterm.mobatek.net/download.html
-
-# 添加连接
-点击左上角 Session → SSH
-Remote host: 192.168.145.121
-# 添加用户认证
-点击[小人头像按钮] (Create or manage credentials) → Credentials → New
-  Name: master
-  Username(节点认证 用户): root
-  Password(节点认证 密码): 123456
-[√]Specify username: [master]
--- 也可在以下设置中 → 添加用户认证
-Settings | Configuration | General | MobaXterm passwords management
-                                   | Persistent home directory: 本地启动时的工作目录
-                                   | Persistent root (/) directory: 本地启动时的根目录
-# Master Password settings
-what.0414
-
-# 命令连接
-1) Start local terminal
-   命令行界面(终端模拟器)
-2) ssh [user]@[host]  →  默认连接22端口
-   ssh root@192.168.145.121
-3) 可以使用 -p 指定一个特定的端口，来连接到服务器
-   ssh -p 8080 root@192.168.145.121
-4) 如果使用SSH密钥对进行身份验证，可以使用 -i 选项指定私钥文件
-   ssh -i /path/to/private_key root@192.168.145.121
-```
-
-### # [FinalShell](http://www.hostbuf.com)
-
-```markdown
-# 下载地址(Windows版)
--- 新版本
-https://www.hostbuf.com/t/988.html
--- 旧版本
-https://www.hostbuf.com/t/1326.html
-
-# 若提示：以管理员身份打开
--- 方法1
-右击exe程序 → 属性 → 兼容性 → 勾选[以管理员方式运行此程序]
--- 方法2
-右击快捷exe程序 → 属性 → 快捷方式 → 高级 → 勾选[用管理员身份运行]
-```
-
-### # [Xshell](https://www.xshell.com)
-
-```markdown
-# 下载地址(Windows版)
-https://www.xshell.com/zh/free-for-home-school
-
-#  注意
-还需要等待 Microsoft Visual C++ 下载
-```
-
-### # [WinSCP](https://winscp.net/eng/docs/start)
-
-```markdown
-# 下载地址
-https://winscp.net/eng/download.php
-
-# 汉化版下载
-https://www.soft-down.net/detail/273040/2730391001.shtml
-```
-
-### # [WindTerm](https://github.com/kingToolbox/WindTerm/tags)
-
-```markdown
-# 备用地址
-https://www.dongli7.com/thread-151-1-1.html
-```
-
-## 【接口测试】工具
-
-### # Apipost
-
-```markdown
-# 官网
-https://www.apipost.cn/download.html
-
-# 登录方式
-  邮箱：2244255266@qq.com
-  用户名：Viski
-```
-
-### # Postman
-
-```markdown
-# 官网
-https://www.postman.com/downloads
-
-# 登录方式
-  用户名：casualway
-  邮箱：2244255266@qq.com
-```
-
-## 【代码开发】工具
-
-### # VSCode
-
-```markdown
-# 官网
-https://code.visualstudio.com
-
-# 下载地址
+# Visual Studio Code 下载地址
 https://code.visualstudio.com/Download
 
 # 往期版本
@@ -191,7 +20,7 @@ https://az764295.vo.msecnd.net/stable/e2816fe719a4026ffa1ee0189dc89bdfdbafb164/V
 https://vscode.cdn.azure.cn/stable/e2816fe719a4026ffa1ee0189dc89bdfdbafb164/VSCodeUserSetup-x64-1.75.0.exe
 ```
 
-#### * [常用快捷键](https://zhuanlan.zhihu.com/p/652337848)
+### # [常用快捷键](https://zhuanlan.zhihu.com/p/652337848)
 
 ```tex
 * 快捷键设置
@@ -214,21 +43,7 @@ Control + Shift + P
   Ctrl + Shift + F
 ```
 
-#### * 基础配置
-
-##### File | Preferences
-
-```tex
-Settings → 搜索 Enable Preview → 点击 Workbench | Editor Management → 取消勾选 Enable Preview
-```
-
-##### 语言设置
-
-```tex
-Ctrl + Shift + P → 搜索 configure display language → Enter → 选择语言 → 重启
-```
-
-#### * VSCode-常用插件
+### # VSCode-插件
 
 [修改VSCode的插件安装目录](https://it.cha138.com/javascript/show-4674673.html)
 
@@ -287,31 +102,42 @@ Material Theme UI					主题插件，以下是一些热门主题
 									  Quiet Light
 ```
 
-#### # [工具/插件]下载
+### # 基础配置
+
+#### File | Preferences
+
+```tex
+Settings → 搜索 Enable Preview → 点击 Workbench | Editor Management → 取消勾选 Enable Preview
+```
+
+#### 新建窗口打开
+
+```tex
+User | Window | New Window
+                           → Open Files In New Window → on
+                           → Open Folders in New Window → on
+```
+
+#### 语言设置
+
+```tex
+Ctrl + Shift + P → 搜索 Configure Display Language → Enter → 选择语言(en、zh-cn) → 重启
+```
+
+#### 工具/插件
 
 ```markdown
-# TypeScript 文件
+# TypeScript 文件下载位置
 %LocalAppData%\Microsoft\TypeScript
 ```
 
-### # Dev-C++
+## 【[IDEA](https://www.jetbrains.com)】Java工具
 
 ```markdown
 # 下载地址
-https://sourceforge.net/projects/orwelldevcpp
-```
-
-## [【IDEA】Java工具](https://www.jetbrains.com)
-
-### # 下载地址
-
-```tex
 https://www.jetbrains.com/idea
-```
 
-往期版本
-
-```tex
+# 期版本
 https://www.jetbrains.com/idea/download/other.html
 ```
 
@@ -1638,7 +1464,7 @@ File | Settings | Appearance & Behavior | Notifications → Microsoft Defender c
 https://www.jetbrains.com/pycharm
 ```
 
-### # Pycharm-安装后基础配置
+### # 基础配置
 
 #### File | Settings
 
@@ -1666,6 +1492,349 @@ Editor | File Encodings → Global Encoding、Project Encoding、Default encodin
 ```markdown
 # 新项目 -> 基础配置
 Settings for New Projects...
+```
+
+## 【语言】工具汇总
+
+### [HBuilder](https://www.dcloud.io) (APP)
+
+```markdown
+# 下载地址
+https://www.dcloud.io/hbuilderx.html
+
+# 运行
+不压缩 JS、代码 直接在浏览器输出
+# 发行
+压缩打包
+```
+
+### [Dev-C++](https://www.bloodshed.net) (C/C++)
+
+```markdown
+# 下载地址
+https://sourceforge.net/projects/orwelldevcpp
+```
+
+### [Eclipse](https://www.eclipse.org) (Java)
+
+#### # 下载地址
+
+```tex
+https://www.eclipse.org/downloads
+https://www.eclipse.org/downloads/packages
+```
+
+往期版本
+
+```tex
+https://www.eclipse.org/downloads/packages/release
+```
+
+下载须知
+
+点击 Select Another Mirror，选择China(国内)镜像才有下载速度
+
+![image-20220303135230985](..\imgs\01\Tools\Eclipse\image-20220303135230985.png)
+
+![image-20220303135605682](..\imgs\01\Tools\Eclipse\image-20220303135605682.png)
+
+#### # 常用快捷键
+
+```markdown
+Ctrl + Shift + B	打断点/取消断点
+Ctrl + Shift + R	查找资源
+Ctrl + Shift + S	打开
+Ctrl + Shift + T	查看某个类所在Jar包
+Ctrl + Shift + X	打断点/取消断点
+Ctrl + Shift + Y	打断点/取消断点
+
+Ctrl + H			搜索
+Ctrl + L			跳转到在指定行
+Ctrl + O			查看当前类中的方法
+Alt + ←				返回上一步操作
+Alt + →				返回下一步操作
+```
+
+#### # Java断点调试
+
+```markdown
+# 键位说明
+F5是执行当前调用内部细节步骤的下一步(单步跳入)
+F6是执行下一步(单步跳过)
+F7是跳过方法内部的执行步骤，直接返回到方法外的下一步(单步返回)
+F8是跳出断点调试(跳过调试，继续执行代码，在下一个断点处暂停再次进入断点调试)
+
+# 清除所有断点
+Run → Remove All Breakpoints
+```
+
+#### # 分支切换
+
+右击项目 → 选择 Team → 选择 Switch To → 点击 Other
+
+![image-20210714095228542](..\imgs\01\Tools\Eclipse\image-20210714095228542.png)
+
+点击 Remote Tracking → 选择需要切换的分支
+
+![image-20210714100126595](..\imgs\01\Tools\Eclipse\image-20210714100126595.png)
+
+#### # 文件搜索
+
+```tex
+1) 搜索事项
+Ctrl+H → File Search → Containing text 为搜索的内容
+                       File name patterns 为搜索的文件格式；多种格式用 , 分割
+                       如: *.java,*.xml,*.properties 等
+2) 设置搜索范围
+Ctrl+H → (Scop中的)Working set → Choose → Resource → 选中指定项目并起个名称 → 勾选项目
+```
+
+#### # 基础配置
+
+##### * 更换工作空间
+
+```tex
+File | Switch Workspace → Others
+注：点开 Copy Settings，勾选Workbench Layout、Work Settings，可保存配置到工作区间
+```
+
+##### * [等号左边自动补齐](https://blog.csdn.net/weixin_41079550/article/details/87387971)
+
+```tex
+Window | Perferences | General | Keys → 搜索框里输入Quick Assist - Assign to local variable
+对默认的快捷键Ctrl+2, L进行修改；根据自己习惯修改，通常为“Ctrl+Alt+/”；然后点击Apply
+```
+
+##### * [设置自动补全](https://blog.51cto.com/lizhiyuan/2316070)
+
+```tex
+Window | Perferences | Java | Editor | Content Assist
+在”.”号后面加入我们需要自动提示的首字幕，比如”abc”，可以把26个字母的大小写全部加上
+如：.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_
+```
+
+##### * 配置eclipse.ini
+
+指定 jdk 版本 → 在eclipse.ini文件顶部插入：
+
+```ini
+-vm
+# 文件路径
+E:\Program Files\Java\jdk_1.8.0_271
+```
+
+#### # Eclipse-插件
+
+##### * 反编译工具
+
+###### 下载 架包
+
+[net.sf.jadclipse_3.3.0.jar](http://jadclipse.sourceforge.net)
+
+![image-20210804145008144](..\imgs\01\Tools\Eclipse\image-20210804145008144.png)
+
+![image-20210804145604194](..\imgs\01\Tools\Eclipse\image-20210804145604194.png)
+
+###### 下载 压缩包
+
+[Jad 1.5.8g for xxx.zip](http://www.javadecompilers.com/jad)
+
+![image-20210804150320044](..\imgs\01\Tools\Eclipse\image-20210804150320044.png)
+
+###### 安装 架包
+
+将【net.sf.jadclipse_3.3.0.jar】复制到【eclipse】安装目录下的【plugins】中(若不生效，则放入【dropins】)
+
+作用：如果不安装，则【eclipse】的【preferences】中搜不到【JadClipse】
+
+![image-20210804152022975](..\imgs\01\Tools\Eclipse\image-20210804152022975.png)
+
+![image-20210804152209237](..\imgs\01\Tools\Eclipse\image-20210804152209237.png)
+
+###### 安装 压缩包
+
+新建文件夹【Jad】（也可以自定义文件夹名，指定路径正确即可）
+
+将【Jad 1.5.8g for xxx.zip】解压到【eclipse】安装目录下的新建文件夹【Jad】中
+
+在该【Jad】下新建【jadtemp】文件，用于存放【jad.exe】执行程序的缓存文件夹
+
+![image-20210804152944746](..\imgs\01\Tools\Eclipse\image-20210804152944746.png)
+
+![image-20210804153420770](..\imgs\01\Tools\Eclipse\image-20210804153420770.png)
+
+###### 进行配置
+
+在【eclipse】的【windows → preferences】中搜索【 jad】，点击【JadClipse】指定【 Jad.exe】的路径、缓存文件夹【jadtemp】的路径，指定完后，点击【Apply → OK】
+
+![image-20210804154450826](..\imgs\01\Tools\Eclipse\image-20210804154450826.png)
+
+在【preferences】中搜索【file】，点击【File Associations】，点击【 *.class → Add】、【 *.class without source  → Add】选择默认编辑方式为【JadClipse Class File Viewer】，点击【Default → OK】
+
+![image-20210804160545020](..\imgs\01\Tools\Eclipse\image-20210804160545020.png)
+
+![image-20210804160934432](..\imgs\01\Tools\Eclipse\image-20210804160934432.png)
+
+##### * 安装包
+
+```markdown
+# Eclipse-Jetty
+下载: https://sourceforge.net/projects/eclipse-jetty
+安装: https://blog.csdn.net/qq_41284457/article/details/82352349
+```
+
+#### # Eclipse-Git相关
+
+##### * 文件还原
+
+```tex
+右击文件 → Replace With → Git Index
+```
+
+#### # Eclipse-Maven相关
+
+##### * 创建Maven Web项目
+
+```tex
+https://www.yiibai.com/maven/create-a-maven-web-project-with-eclipse.html
+```
+
+##### * 命令
+
+[如何在eclipse中使用mvn clean install](https://zhidao.baidu.com/question/1114209340582595139.html)
+
+```markdown
+1) 在Maven项目或者pom.xml上右键 → Run As  → “Maven Build...”
+   或者Run Configuration → “Maven Build”
+2) 在“Goals”输入框中输入：clean install -X
+3) 使用时在Run As中选中Maven build即可
+```
+
+mvn命令若干：
+
+```markdown
+mvn -h									不会用时，可寻求帮助
+```
+
+```markdown
+mvn clean compile						将【.java类】编译为【.class文件】
+```
+
+```markdown
+mvn clean test							执行单元测试(本质上，还是执行了一个完整的生命周期)
+周期【clean:clean, resources:resources, compiler:compile, resources:testResources, compiler:testCompile】
+```
+
+```markdown
+mvn clean package						进行打包
+```
+
+```markdown
+mvn clean install						将某jar包安装到maven本地仓库中
+```
+
+```markdown
+# https://blog.csdn.net/qq_42000661/article/details/107246758
+mvn clean install –Dmaven.test.skip=true
+mvn clean install -Dmaven.test.skip=true -U
+mvn clean install -Dmaven.test.skip=true -e -U
+清理项目生产的临时文件,一般是模块下的target目录。同时执行模块安装命令，将打包的的jar/war文件复制到你的本地仓库中,供其他模块使用。【-Dmaven.test.skip=true】作用：跳过测试(同时会跳过test compile)，-e详细异常，-U强制更新
+```
+
+```markdown
+mvn archetype:generate					快速的搭建项目骨架
+输入一些groupId/artifactId/version等信息，由mvn插件自动生成一些必要的依赖和项目骨架
+```
+
+##### * 配置
+
+```tex
+右击项目 | Debug/Run As | Debug/Run configurations → 右击maven build → new
+	Base directory : 点击Browse Workspace → 选择要部署的项目
+	goals : clean install –Dmaven.test.skip=true
+	配置完后 : 点击Apply
+```
+
+#### # Eclipse-Tomcat相关
+
+##### * 启动时间过长
+
+Server at localhost was unable to start within 45 seconds
+
+解决办法：
+
+```tex
+左键双击server下的tomcat → 在Overview中点击Timeouts → 增加Start (in seconds) 中的启动时间
+```
+
+##### * web项目名称设置
+
+```tex
+单击 Servers → 双击 Tomcat 打开窗口 → 点击 Modules → 点击 Edit → 修改 Path(/ 表示没有项目名称)
+```
+
+![image-20220728105530250](..\imgs\01\Tools\Eclipse\image-20220728105530250.png)
+
+![image-20220728105814870](..\imgs\01\Tools\Eclipse\image-20220728105814870.png)
+
+#### # Eclipse-常见问题
+
+##### * [打开之后没有界面](https://blog.csdn.net/lingdu_dou/article/details/118913203)
+
+```tex
+进入 eclipse工作目录
+进入 .metadata.plugins
+删除 org.eclipse.e4.workbench文件夹
+```
+
+##### * [项目红色叹号](https://blog.csdn.net/linkangqi/article/details/7708138)
+
+```tex
+eclipse有红色叹号，一般情况可以这样处理：
+	1) 右键项目名称 BuildPath → Configure Build Path...中，然后上面有几个选项卡找到 Libraries中出现红色叉号的包为路径错误的包。到.classpath中修改相应包的当前路径。然后回到eclipse中F5刷新工程。
+	2) 不行的话可以试试clean项目 project → clean
+
+如果eclipse项目有红色叹号，而Libraries中没有出现红色叉号的包，可以这样做：
+	1) 先把eclipse转换到Markers视图，Window → Show View → Markers
+你会发现这些报错内容：
+Archive for required library: ‘XXXXXXXX001’ in project ‘xxxxxxxxx’ cannot be read or is not a valid ZIP file
+	2) 用记事本打开项目根目录的.classpath文件，找到 <classpathentry kind="lib" path="XXXXXXXXX001"/> 删掉这一行
+	保存，刷新后，这个报错就没有了，从而红色叹号也没有了。
+```
+
+##### * js报错
+
+```markdown
+# 步骤1
+windows → preference → Java Script → Validator → Errors/Warnings → Enable Javascript Sematic validation 前面的勾去掉
+
+# 步骤2
+右键项目 → properties → Builders 去掉 JavaScript Validator 前面的勾
+```
+
+##### * [注释字体大小不统一](https://blog.csdn.net/qq_42780289/article/details/102160670)
+
+```tex
+Windows → Preferences → Genneral → Appearance → Colors and Font → Basic
+	Text Font → Edit → 将字体改为[宋体]
+```
+
+### jd-gui (Java反编译)
+
+#### # GitHub资源
+
+```markdown
+# 最新版本
+http://java-decompiler.github.io
+
+# 以往版本
+https://github.com/java-decompiler/jd-gui/releases
+```
+
+#### # 其他资源
+
+```tex
+https://jd-gui.apponic.com
 ```
 
 ## 【Java/JVM】测试/调优
@@ -1737,7 +1906,31 @@ https://arthas.aliyun.com/doc/download.html
 https://github.com/alibaba/arthas/releases
 ```
 
-## 【SQL】连接工具
+## 【接口测试】工具
+
+### # Apipost
+
+```markdown
+# 官网
+https://www.apipost.cn/download.html
+
+# 登录方式
+  邮箱：2244255266@qq.com
+  用户名：Viski
+```
+
+### # Postman
+
+```markdown
+# 官网
+https://www.postman.com/downloads
+
+# 登录方式
+  用户名：casualway
+  邮箱：2244255266@qq.com
+```
+
+## 【SQL连接】工具
 
 ### # [DataGrip](https://www.jetbrains.com/datagrip)
 
@@ -1984,6 +2177,84 @@ https://github.com/uglide/RedisDesktopManager
 https://redis.com/redis-enterprise/redis-insight/#insight-form
 ```
 
+## 【节点连接】工具
+
+### # [MobaXterm](https://mobaxterm.mobatek.net)
+
+```markdown
+# 下载地址(Windows版)
+https://mobaxterm.mobatek.net/download.html
+
+# 添加连接
+点击左上角 Session → SSH
+Remote host: 192.168.145.121
+# 添加用户认证
+点击[小人头像按钮] (Create or manage credentials) → Credentials → New
+  Name: master
+  Username(节点认证 用户): root
+  Password(节点认证 密码): 123456
+[√]Specify username: [master]
+-- 也可在以下设置中 → 添加用户认证
+Settings | Configuration | General | MobaXterm passwords management
+                                   | Persistent home directory: 本地启动时的工作目录
+                                   | Persistent root (/) directory: 本地启动时的根目录
+# Master Password settings
+what.0414
+
+# 命令连接
+1) Start local terminal
+   命令行界面(终端模拟器)
+2) ssh [user]@[host]  →  默认连接22端口
+   ssh root@192.168.145.121
+3) 可以使用 -p 指定一个特定的端口，来连接到服务器
+   ssh -p 8080 root@192.168.145.121
+4) 如果使用SSH密钥对进行身份验证，可以使用 -i 选项指定私钥文件
+   ssh -i /path/to/private_key root@192.168.145.121
+```
+
+### # [FinalShell](http://www.hostbuf.com)
+
+```markdown
+# 下载地址(Windows版)
+-- 新版本
+https://www.hostbuf.com/t/988.html
+-- 旧版本
+https://www.hostbuf.com/t/1326.html
+
+# 若提示：以管理员身份打开
+-- 方法1
+右击exe程序 → 属性 → 兼容性 → 勾选[以管理员方式运行此程序]
+-- 方法2
+右击快捷exe程序 → 属性 → 快捷方式 → 高级 → 勾选[用管理员身份运行]
+```
+
+### # [Xshell](https://www.xshell.com)
+
+```markdown
+# 下载地址(Windows版)
+https://www.xshell.com/zh/free-for-home-school
+
+#  注意
+还需要等待 Microsoft Visual C++ 下载
+```
+
+### # [WinSCP](https://winscp.net/eng/docs/start)
+
+```markdown
+# 下载地址
+https://winscp.net/eng/download.php
+
+# 汉化版下载
+https://www.soft-down.net/detail/273040/2730391001.shtml
+```
+
+### # [WindTerm](https://github.com/kingToolbox/WindTerm/tags)
+
+```markdown
+# 备用地址
+https://www.dongli7.com/thread-151-1-1.html
+```
+
 ## [【VMware】虚拟机](https://www.vmware.com)
 
 ### # 下载地址
@@ -2151,332 +2422,6 @@ vdmInstUtil: 12/03/21 11:12:46 Exiting custom action VMAddViewLocalHostEntryToHo
    操作：此电脑 → C:\Windows\SoftwareDistribution
 ```
 
-## [【Eclipse】Java工具](https://www.eclipse.org)
-
-### # 下载地址
-
-```tex
-https://www.eclipse.org/downloads
-https://www.eclipse.org/downloads/packages
-```
-
-往期版本
-
-```tex
-https://www.eclipse.org/downloads/packages/release
-```
-
-下载须知
-
-点击 Select Another Mirror，选择China(国内)镜像才有下载速度
-
-![image-20220303135230985](..\imgs\01\Tools\Eclipse\image-20220303135230985.png)
-
-![image-20220303135605682](..\imgs\01\Tools\Eclipse\image-20220303135605682.png)
-
-### # 常用快捷键
-
-```markdown
-Ctrl + Shift + B	打断点/取消断点
-Ctrl + Shift + R	查找资源
-Ctrl + Shift + S	打开
-Ctrl + Shift + T	查看某个类所在Jar包
-Ctrl + Shift + X	打断点/取消断点
-Ctrl + Shift + Y	打断点/取消断点
-
-Ctrl + H			搜索
-Ctrl + L			跳转到在指定行
-Ctrl + O			查看当前类中的方法
-Alt + ←				返回上一步操作
-Alt + →				返回下一步操作
-```
-
-### # Java断点调试
-
-```markdown
-# 键位说明
-F5是执行当前调用内部细节步骤的下一步(单步跳入)
-F6是执行下一步(单步跳过)
-F7是跳过方法内部的执行步骤，直接返回到方法外的下一步(单步返回)
-F8是跳出断点调试(跳过调试，继续执行代码，在下一个断点处暂停再次进入断点调试)
-
-# 清除所有断点
-Run → Remove All Breakpoints
-```
-
-### # 分支切换
-
-右击项目 → 选择 Team → 选择 Switch To → 点击 Other
-
-![image-20210714095228542](..\imgs\01\Tools\Eclipse\image-20210714095228542.png)
-
-点击 Remote Tracking → 选择需要切换的分支
-
-![image-20210714100126595](..\imgs\01\Tools\Eclipse\image-20210714100126595.png)
-
-### # 文件搜索
-
-```tex
-1) 搜索事项
-Ctrl+H → File Search → Containing text 为搜索的内容
-                       File name patterns 为搜索的文件格式；多种格式用 , 分割
-                       如: *.java,*.xml,*.properties 等
-2) 设置搜索范围
-Ctrl+H → (Scop中的)Working set → Choose → Resource → 选中指定项目并起个名称 → 勾选项目
-```
-
-### # 基础配置
-
-#### * 更换工作空间
-
-```tex
-File | Switch Workspace → Others
-注：点开 Copy Settings，勾选Workbench Layout、Work Settings，可保存配置到工作区间
-```
-
-#### * [等号左边自动补齐快捷键](https://blog.csdn.net/weixin_41079550/article/details/87387971)
-
-```tex
-Window | Perferences | General | Keys → 搜索框里输入Quick Assist - Assign to local variable
-对默认的快捷键Ctrl+2, L进行修改；根据自己习惯修改，通常为“Ctrl+Alt+/”；然后点击Apply
-```
-
-#### * [设置自动补全](https://blog.51cto.com/lizhiyuan/2316070)
-
-```tex
-Window | Perferences | Java | Editor | Content Assist
-在”.”号后面加入我们需要自动提示的首字幕，比如”abc”，可以把26个字母的大小写全部加上
-如：.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_
-```
-
-#### * 配置eclipse.ini
-
-指定 jdk 版本 → 在eclipse.ini文件顶部插入：
-
-```ini
--vm
-# 文件路径
-E:\Program Files\Java\jdk_1.8.0_271
-```
-
-### # Eclipse-插件
-
-#### * 反编译工具
-
-##### 下载 架包
-
-[net.sf.jadclipse_3.3.0.jar](http://jadclipse.sourceforge.net)
-
-![image-20210804145008144](..\imgs\01\Tools\Eclipse\image-20210804145008144.png)
-
-![image-20210804145604194](..\imgs\01\Tools\Eclipse\image-20210804145604194.png)
-
-##### 下载 压缩包
-
-[Jad 1.5.8g for xxx.zip](http://www.javadecompilers.com/jad)
-
-![image-20210804150320044](..\imgs\01\Tools\Eclipse\image-20210804150320044.png)
-
-##### 安装 架包
-
-将【net.sf.jadclipse_3.3.0.jar】复制到【eclipse】安装目录下的【plugins】中(若不生效，则放入【dropins】)
-
-作用：如果不安装，则【eclipse】的【preferences】中搜不到【JadClipse】
-
-![image-20210804152022975](..\imgs\01\Tools\Eclipse\image-20210804152022975.png)
-
-![image-20210804152209237](..\imgs\01\Tools\Eclipse\image-20210804152209237.png)
-
-##### 安装 压缩包
-
-新建文件夹【Jad】（也可以自定义文件夹名，指定路径正确即可）
-
-将【Jad 1.5.8g for xxx.zip】解压到【eclipse】安装目录下的新建文件夹【Jad】中
-
-在该【Jad】下新建【jadtemp】文件，用于存放【jad.exe】执行程序的缓存文件夹
-
-![image-20210804152944746](..\imgs\01\Tools\Eclipse\image-20210804152944746.png)
-
-![image-20210804153420770](..\imgs\01\Tools\Eclipse\image-20210804153420770.png)
-
-##### 进行配置
-
-在【eclipse】的【windows → preferences】中搜索【 jad】，点击【JadClipse】指定【 Jad.exe】的路径、缓存文件夹【jadtemp】的路径，指定完后，点击【Apply → OK】
-
-![image-20210804154450826](..\imgs\01\Tools\Eclipse\image-20210804154450826.png)
-
-在【preferences】中搜索【file】，点击【File Associations】，点击【 *.class → Add】、【 *.class without source  → Add】选择默认编辑方式为【JadClipse Class File Viewer】，点击【Default → OK】
-
-![image-20210804160545020](..\imgs\01\Tools\Eclipse\image-20210804160545020.png)
-
-![image-20210804160934432](..\imgs\01\Tools\Eclipse\image-20210804160934432.png)
-
-#### * 安装包
-
-```markdown
-# Eclipse-Jetty
-下载: https://sourceforge.net/projects/eclipse-jetty
-安装: https://blog.csdn.net/qq_41284457/article/details/82352349
-```
-
-### # Eclipse-Git相关
-
-#### * 文件还原
-
-```tex
-右击文件 → Replace With → Git Index
-```
-
-### # Eclipse-Maven相关
-
-#### * 创建Maven Web项目
-
-```tex
-https://www.yiibai.com/maven/create-a-maven-web-project-with-eclipse.html
-```
-
-#### * 命令
-
-[如何在eclipse中使用mvn clean install](https://zhidao.baidu.com/question/1114209340582595139.html)
-
-```markdown
-1) 在Maven项目或者pom.xml上右键 → Run As  → “Maven Build...”
-   或者Run Configuration → “Maven Build”
-2) 在“Goals”输入框中输入：clean install -X
-3) 使用时在Run As中选中Maven build即可
-```
-
-mvn命令若干：
-
-```markdown
-mvn -h									不会用时，可寻求帮助
-```
-
-```markdown
-mvn clean compile						将【.java类】编译为【.class文件】
-```
-
-```markdown
-mvn clean test							执行单元测试(本质上，还是执行了一个完整的生命周期)
-周期【clean:clean, resources:resources, compiler:compile, resources:testResources, compiler:testCompile】
-```
-
-```markdown
-mvn clean package						进行打包
-```
-
-```markdown
-mvn clean install						将某jar包安装到maven本地仓库中
-```
-
-```markdown
-# https://blog.csdn.net/qq_42000661/article/details/107246758
-mvn clean install –Dmaven.test.skip=true
-mvn clean install -Dmaven.test.skip=true -U
-mvn clean install -Dmaven.test.skip=true -e -U
-清理项目生产的临时文件,一般是模块下的target目录。同时执行模块安装命令，将打包的的jar/war文件复制到你的本地仓库中,供其他模块使用。【-Dmaven.test.skip=true】作用：跳过测试(同时会跳过test compile)，-e详细异常，-U强制更新
-```
-
-```markdown
-mvn archetype:generate					快速的搭建项目骨架
-输入一些groupId/artifactId/version等信息，由mvn插件自动生成一些必要的依赖和项目骨架
-```
-
-#### * 配置
-
-```tex
-右击项目 | Debug/Run As | Debug/Run configurations → 右击maven build → new
-	Base directory : 点击Browse Workspace → 选择要部署的项目
-	goals : clean install –Dmaven.test.skip=true
-	配置完后 : 点击Apply
-```
-
-### # Eclipse-Tomcat相关
-
-#### * 启动时间过长
-
-Server at localhost was unable to start within 45 seconds
-
-解决办法：
-
-```tex
-左键双击server下的tomcat → 在Overview中点击Timeouts → 增加Start (in seconds) 中的启动时间
-```
-
-#### * web项目名称设置
-
-```tex
-单击 Servers → 双击 Tomcat 打开窗口 → 点击 Modules → 点击 Edit → 修改 Path(/ 表示没有项目名称)
-```
-
-![image-20220728105530250](..\imgs\01\Tools\Eclipse\image-20220728105530250.png)
-
-![image-20220728105814870](..\imgs\01\Tools\Eclipse\image-20220728105814870.png)
-
-### # Eclipse-常见问题
-
-#### * [打开之后没有界面](https://blog.csdn.net/lingdu_dou/article/details/118913203)
-
-```tex
-进入 eclipse工作目录
-进入 .metadata.plugins
-删除 org.eclipse.e4.workbench文件夹
-```
-
-#### * [项目红色叹号](https://blog.csdn.net/linkangqi/article/details/7708138)
-
-```tex
-eclipse有红色叹号，一般情况可以这样处理：
-	1) 右键项目名称 BuildPath → Configure Build Path...中，然后上面有几个选项卡找到 Libraries中出现红色叉号的包为路径错误的包。到.classpath中修改相应包的当前路径。然后回到eclipse中F5刷新工程。
-	2) 不行的话可以试试clean项目 project → clean
-
-如果eclipse项目有红色叹号，而Libraries中没有出现红色叉号的包，可以这样做：
-	1) 先把eclipse转换到Markers视图，Window → Show View → Markers
-你会发现这些报错内容：
-Archive for required library: ‘XXXXXXXX001’ in project ‘xxxxxxxxx’ cannot be read or is not a valid ZIP file
-	2) 用记事本打开项目根目录的.classpath文件，找到 <classpathentry kind="lib" path="XXXXXXXXX001"/> 删掉这一行
-	保存，刷新后，这个报错就没有了，从而红色叹号也没有了。
-```
-
-#### * js报错
-
-```markdown
-# 步骤1
-windows → preference → Java Script → Validator → Errors/Warnings → Enable Javascript Sematic validation 前面的勾去掉
-
-# 步骤2
-右键项目 → properties → Builders 去掉 JavaScript Validator 前面的勾
-```
-
-#### * [注释字体大小不统一](https://blog.csdn.net/qq_42780289/article/details/102160670)
-
-```tex
-Windows → Preferences → Genneral → Appearance → Colors and Font → Basic
-	Text Font → Edit → 将字体改为[宋体]
-```
-
-## 【jd-gui】Java反编译工具
-
-### # GitHub资源
-
-最新版本
-
-```tex
-http://java-decompiler.github.io
-```
-
-以往版本
-
-```tex
-https://github.com/java-decompiler/jd-gui/releases
-```
-
-### # 其他资源
-
-```tex
-https://jd-gui.apponic.com
-```
-
 ## 【远程控制】工具
 
 ### # 向日葵
@@ -2497,6 +2442,70 @@ https://www.todesk.com
 
 # 下载地址
 https://www.todesk.com/download.html
+```
+
+## 【生产力】工具箱
+
+### # He3
+
+```markdown
+# 官网
+https://he3.app
+
+# 中文官网
+https://he3app.com/zh
+
+# 登录
+微信授权
+```
+
+#### * 下载应用
+
+```tex
+Ctrl + K → 搜索插件
+```
+
+#### * He3-插件
+
+```markdown
+# 收藏推荐
+文本比较           文本分析       文本提取器
+JSON格式化        JSON转XML      XML转JSON
+JSON转Java Bean  JSON转SQL模式   JSON表格转SQL
+```
+
+### # uTools
+
+```markdown
+# 官网
+https://u.tools
+
+# 登录
+微信授权
+
+# 使用方法如下
+```
+
+#### * 下载应用
+
+1. 点击 插件应用市场：
+
+![步骤1](..\imgs\01\Tools\uTools\image-20210309222530385.png)
+
+2. 搜索插件并下载：
+
+![步骤2](..\imgs\01\Tools\uTools\image-20210309223100726.png)
+
+#### * uTools-插件
+
+```markdown
+# 内网穿透
+https://github.com/lblblong/nat-utools
+安装步骤:
+1) 首先下载最新一个 release 中的 upx 插件文件
+   https://github.com/lblblong/nat-utools/releases
+2) 然后呼出 utools 输入框，将刚刚下载的 upx 插件拖入输入框安装即可
+3) 在 utools 输入框输入关键词即可打开内网穿透面板：nw，内网穿透
 ```
 
 # 浏览器
@@ -2736,32 +2745,37 @@ https://www.microsoft.com/edge
 
 ## 【浏览器-插件】
 
+### # 翻译插件
+
+```markdown
+# 沉浸式翻译 (v1.12.8) → GitHub资源
+https://github.com/immersive-translate/immersive-translate/tags
+# 官网
+https://immersivetranslate.com
+```
+
 ### # 码云-文件树
 
 ```markdown
-# Gitee资源
-
-* GitCodeTree (2.4.9) 
+# GitCodeTree (2.4.9) → Gitee资源
 https://gitee.com/oschina/GitCodeTree
 ```
 
 ### # 可视化JSON界面
 
 ```markdown
-# GitHub资源
-
-* JSONView (0.0.32.2)
+# JSONView (0.0.32.2) → GitHub资源
 https://github.com/gildas-lormeau/JSONView-for-Chrome
+https://github.com/gildas-lormeau/JSONVue
 ```
 
 ### 		# 调试vue.js应用程序
 
-[Vue 资源](https://github.com/vuejs/vue) , [调试工具 ](https://blog.csdn.net/weixin_46048542/article/details/128117598)
+[Vue 资源](https://github.com/vuejs/vue) | [调试工具](https://github.com/vuejs/devtools) | [安装步骤 ](https://blog.csdn.net/weixin_46048542/article/details/128117598)
 
 ```markdown
-# devtools资源
-https://github.com/vuejs/devtools
-https://devtools.vuejs.org/guide/installation.html
+# devtools 直接插件
+https://devtools.vuejs.org/getting-started/installation
 
 # 进入到解压目录，执行以下命令
 -- 未安装，执行以下命令
@@ -2785,9 +2799,7 @@ yarn config set electron_mirror https://npm.taobao.org/mirrors/electron
 ### 		# YApi跨域请求
 
 ```markdown
-# GitHub资源
-
-* cross-request (3.1)
+# GitHub资源 → cross-request (3.1)
 https://github.com/YMFE/cross-request
 ```
 
