--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -1238,7 +1238,7 @@ storage:
   #journal:            #是否启用journal日志
     #enabled: true
 net:
-  bindIp: 0.0.0.0
+  bindIp: 0.0.0.0 # 表示允许所有连接
   port: 27017 # port
 processManagement:
   fork: true
@@ -1293,6 +1293,13 @@ KillMode=process
 
 [Install]
 WantedBy=multi-user.target
+
+# 鉴权进入MongoDB
+mongosh --host 127.0.0.1 --port 27017 -u xxw -p 123456
+# 或者 进入后再鉴权
+mongosh --host 127.0.0.1 --port 27017
+use admin
+db.auth("xxw", "123456")
 
 # 关闭 MongoDB
 mongod --port=27017 --dbpath=/mongodb/data --shutdown
@@ -2671,11 +2678,8 @@ https://v2.cn.vuejs.org/v2/guide/installation.html
 
 ### # [脚手架](https://cli.vuejs.org/zh)
 
-#### 全局安装
-
--g 表示将模块安装到全局
-
 ```markdown
+# -g 表示将模块安装到全局
 1) 安装指定版本的Vue脚手架，需要卸载当前版本的Vue脚手架
    卸载3.x
      npm uninstall -g @vue/cli
@@ -2700,7 +2704,9 @@ https://v2.cn.vuejs.org/v2/guide/installation.html
   npm uninstall -g webpack-cli
 ```
 
-#### 常用依赖
+### # 常用依赖
+
+#### [vue](https://www.npmjs.com/package/vue?activeTab=versions)
 
 ```markdown
 1) 安装Vue
@@ -2726,9 +2732,15 @@ https://v2.cn.vuejs.org/v2/guide/installation.html
   npm uninstall vue-axios
 ```
 
-##### [sass](https://github.com/sass/node-sass/tags)
+#### [sass](https://github.com/sass/node-sass/tags) | [sass-loader](https://github.com/webpack-contrib/sass-loader/tags)
 
-##### [sass-loader](https://github.com/webpack-contrib/sass-loader/tags)
+```markdown
+# 为了避免安装 node-sass 失败
+1) 进入 ~/.npmrc 文件
+%UserProfile%\.npmrc
+2) 追加以下内容
+sass_binary_site=https://npm.taobao.org/mirrors/node-sass/
+```
 
 [node-sass 和 sass-loader 的各个版本的对应关系](https://blog.csdn.net/weixin_64948861/article/details/129250693)
 
@@ -2754,7 +2766,7 @@ sass-loader: ^7.3.1
 需要在 package.json → devDependencies → 添加 node-sass、sass-loader
 ```
 
-##### [thrift](https://www.npmjs.com/package/thrift?activeTab=versions)
+#### [thrift](https://www.npmjs.com/package/thrift?activeTab=versions)
 
 ```markdown
 # 支持[createConnection]功能的[最后一个 Thrift库]版本号
@@ -2773,7 +2785,7 @@ npm install thrift@0.15.0
 npm uninstall thrift
 ```
 
-##### [net](https://www.npmjs.com/package/net?activeTab=versions)
+#### [net](https://www.npmjs.com/package/net?activeTab=versions)
 
 ```markdown
 # 安装
@@ -2782,7 +2794,7 @@ npm install net
 npm uninstall net
 ```
 
-#### 版本查看
+### # 版本查看
 
 ```markdown
 # vue-cli-2 所有版本
@@ -2868,6 +2880,11 @@ npm install
 */
 npm install ajv@6.0.0
 npm install echarts@4.1.0
+
+# 若启动时
+Failed to resolve loader: cache-loader
+# --save-dev 表示将包添加到 package.json 文件中的 devDependencies 字段。这意味着这个包仅在开发环境中使用，例如用于构建、测试或代码检查等任务，而在生产环境中不需要
+npm install cache-loader --save-dev
 ```
 
 #### 创建TypeScript
@@ -3282,7 +3299,7 @@ Workers & Pages | Subdomain → 输入[新子域名] → Continue
 https://node.weiskey.workers.dev/e920b2bb-c27a-4ddd-ae3f-83d5f9694842
 
 # vlessMain
-vless://e920b2bb-c27a-4ddd-ae3f-83d5f9694842@node.weiskey.workers.dev:443?encryption=none&security=tls&sni=node.weiskey.workers.dev&fp=randomized&type=ws&host=node.weiskey.workers.dev&path=%2F%3Fed%3D2048#node.weiskey.workers.dev
+vless://6d68f9e6-07f1-4d5e-856d-a0b61cf09d14@172.104.127.132:443?encryption=none&security=tls&sni=cd.weski.ip-ddns.com&fp=randomized&type=ws&host=cd.weski.ip-ddns.com&path=%2F%3Fed%3D2048#6kmfi_Japan_2
 ```
 
 ### [Pages部署](https://z008.blogspot.com/2024/03/YJJD.html)
