--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -5800,7 +5800,7 @@ Ctrl + Shift + Esc
 ```tex
 [Win + R] → 输入 control
 
-[Win + S] → 输入 control → 点击 应用 → 控制面板
+[Win + S] → 输入 control → 应用 → 控制面板
 
 Win → 输入 kongzhi
 ```
@@ -5838,6 +5838,16 @@ tasklist|findstr 19784(pid)
 taskkill /im java.exe(映像名称) /f /t
 或者
 taskkill /pid 19784(pid) /f
+```
+
+### 网络测试
+
+```markdown
+# 检测网络连通性、测量网络延迟和判断网络丢包率
+ping ip/域名
+
+# 远程登录和操作远程主机，测试特定服务端口的连通性
+telnet ip port
 ```
 
 ### 进入目录
@@ -6128,6 +6138,26 @@ https://gitcode.net/mirrors/workpixels/uninstall-reinstall-onedrive?utm_source=c
 ```
 
 ## 常见问题
+
+### 开放端口
+
+```markdown
+控制面板 → 系统和安全 → Windows Defender 防火墙 → 高级设置
+  → 入站规则 → 新建规则 → 端口(O)
+                               → 下一步(页)
+                                           [√] TCP
+                                           [√] 特定本地端口(S): 16620
+                               → 下一步(页)
+                                           允许连接(A)
+                               → 下一步(页)
+                                           [√] 域(D)
+                                           [√] 专用(P)
+                                           [√] 共用(U)
+                               → 下一步(页)
+                                           名称(N): crmeb
+  → 出站规则 → 新建规则 → 端口(O)
+                               同上
+```
 
 ### exe图标空白
 
@@ -6445,6 +6475,7 @@ systemctl disable firewalld
 # 打开防火墙端口
 1) 示例打开8848端口
 firewall-cmd --zone=public --add-port=8848/tcp --permanent
+# 打开[8848]到[8850]的[所有端口]
 firewall-cmd --zone=public --add-port=8848-8850/tcp --permanent
 2) 防火墙重新加载配置，重启防火墙
 firewall-cmd --reload
@@ -6488,8 +6519,42 @@ cd /var/lib/docker/volumes
 # ls --help
   -l 表示会显示文件的权限、所有者、所属组和大小等信息
   -h 以KB、MB等为单位进行显示
-ls -l
-ls -lh
+
+-- 查看[python(可执行文件)]的[链接]
+ls -l /usr/bin/python
+-- 显示
+/usr/bin/python -> python2
+
+-- [python2]的[链接]
+ls -l /usr/bin/python2
+-- 显示
+/usr/bin/python2 -> python2.7
+
+-- [python2.7]的[链接]
+ls -lh /usr/bin/python2.7
+-- 显示(没有 -> 就表明当前不是某个可执行程序的链接，是真正的执行文件)
+/usr/bin/python2.7
+
+-- 查看[python3]的[链接]
+ls -l /usr/bin/python3
+-- 显示
+/usr/bin/python3 -> /python/v3.9.8//bin/python3
+
+-- [/python/v3.9.8/bin/python3]的[链接]
+ls -l /python/v3.9.8//bin/python3
+-- 显示
+/python/v3.9.8//bin/python3 -> python3.9
+
+-- [/python/v3.9.8/bin/python3.9]的[链接]
+ls -lh /python/v3.9.8//bin/python3.9
+-- 显示(真正的执行文件)
+/python/v3.9.8//bin/python3.9
+
+# 删除旧的软链接
+sudo rm /usr/bin/python
+
+# 创建新的软链接
+sudo ln -s /python/v3.9.8/bin/python3.9 /usr/bin/python
 ```
 
 #### 列出当前路径
@@ -6789,12 +6854,6 @@ docker run -d --name redis --restart=always -p 6379:6379 \
 --appendonly yes
 ```
 
-若出现以下问题
-
-```bash
-
-```
-
 #### 外部操作
 
 ```bash
@@ -6962,6 +7021,36 @@ docker volume prune
 ```bash
 # 容器无法启动，需要查看容器日志
 docker logs 容器id/容器名
+```
+
+## 卸载安装的软件
+
+```markdown
+# 查看相关的软件包
+yum list installed | grep 软件包名称
+
+# 卸载相关的包
+sudo yum remove \
+软件包名称1 \
+软件包名称2 \
+
+# 手动删除残留的配置文件和数据
+sudo find / -name "与软件相关的文件名"
+sudo grep -r "与软件相关的字符串" /etc
+
+# 删除符号链接
+通常它们位于
+/usr/bin
+/usr/sbin
+/usr/local/bin
+/usr/local/sbin
+等目录
+
+# 清除残留项和依赖
+sudo yum autoremove
+
+# 验证卸载是否彻底
+rpm -qa | grep 软件包名称
 ```
 
 ## vmware--tools
