--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6429,6 +6429,22 @@ service network restart
 reboot
 ```
 
+### 查看版本信息
+
+```bash
+# 通用
+cat /etc/os-release
+
+# 特定
+-- CentOS
+cat /etc/centos-release
+hostnamectl
+-- Red Hat
+cat /etc/redhat-release
+-- Ubuntu、Debian、CentOS(较新版本 → 7以后，安装命令 sudo yum install redhat-lsb)
+lsb_release -a
+```
+
 ### 查看和关闭进程
 
 ```markdown
@@ -6570,13 +6586,18 @@ pwd
   /				[表示要从根目录开始搜索]
   -type f		[只找文件]
   -type d		[只找目录(文件夹)]
+  -name			通配符匹配(通配符 * 匹配任意长度的字符（包括空字符）)
   *xxx			[以 xxx 结尾]
   xxx*			[以 xxx 开头]
   *xxx*			[包含 xxx]
+  -regex		正则表达式匹配(在正则中 .* 等效于通配符 *)
+  xxx$			[恰好以 xxx 结尾]
   2>/dev/null	[将错误消息(如权限不足)重定向到空设备]
 find / -type f -name 'kibana.yml'
 find / -type d -name 'redis-cluster'
 find / -type d -name '*mongo*' 2>/dev/null
+find / -type d -name '*redis.conf' 2>/dev/null
+find / -type d -regex '.*redis.conf$' 2>/dev/null
 
 # 可执行文件
 -- 方式1
