--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -2187,6 +2187,17 @@ https://redis.com/redis-enterprise/redis-insight/#insight-form
 
 ## 【节点连接】工具
 
+```markdown
+# 注意
+127.0.0.1 是本地回环地址(loopback) → 仅允许本机内部进程通信。
+假设虚拟机的局域网 IP 为 192.168.145.121 → 允许同一网络内的其他设备（如你的物理机）访问。
+# 例如
+在[物理机]使用[连接工具 → 如 MongoDB Compass]连接[虚拟机] → 当复制集配置为 127.0.0.1 时：
+各节点会尝试通过 127.0.0.1 与其他节点通信，但 127.0.0.1 仅在[虚拟机]内部有效
+但[物理机]上的[MongoDB Compass]会被告知节点地址是 127.0.0.1，导致物理机尝试连接自己的本地地址(而非虚拟机)
+所以修改为虚拟机ip → 可确保复制集在跨物理机与虚拟机的场景下正常工作
+```
+
 ### # [MobaXterm](https://mobaxterm.mobatek.net)
 
 ```markdown
@@ -2340,7 +2351,7 @@ vi /etc/sysconfig/network-scripts/ifcfg-ens33
 BOOTPROTO=static
 IPADDR=192.168.145.121
 
-3) 设置DNS1和GATEWAY
+3) 设置DNS1和GATEWAY(x.x.x.1 可能被 VMware 占用为 NAT 网关)
 DNS1=192.168.145.2
 GATEWAY=192.168.145.2
 
