--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -458,6 +458,9 @@ git status -s
 git add .
 git commit -m "Y2024M12D04"
 git push
+
+# husky > pre-commit (node vxx.xx.x)
+git commit -m "Y2025M01D30" --no-verify
 ```
 
 ## config配置
