--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -707,7 +707,7 @@ https://repo1.maven.org/maven2
 
 ```tex
 1) 右击【此电脑】→点击【属性】（或 Win+Pause Break），点击【高级系统设置】→【高级】→【环境变量】
-2) 在【系统变量】中点击【新建】→添加【变量名：MAVEN_HOME】、【变量值：解压包路径(F:\ConfigurationFolder2\maven\apache-maven-3.6.1)】
+2) 在【系统变量】中点击【新建】→添加【变量名：MAVEN_HOME】、【变量值：解压包路径(E:\DevDoc\maven\apache-maven-3.6.1)】
 3) 找到【Path】，点击【编辑】→【新建：%MAVEN_HOME%\bin】
 ```
 
@@ -1035,10 +1035,14 @@ startup;
 
 ##### [安装Mysql](https://blog.csdn.net/qq_42971035/article/details/127831101)
 
-mysql在哪看路径
-
-```tex
-https://blog.51cto.com/u_16175446/6788933
+```shell
+# 运行镜像
+docker run -p 3306:3306 --name mysql --restart=always --privileged=true \
+-v /usr/local/mysql/log:/var/log/mysql \
+-v /usr/local/mysql/data:/var/lib/mysql \
+-v /usr/local/mysql/conf:/etc/mysql \
+-v /etc/localtime:/etc/localtime:ro \
+-e MYSQL_ROOT_PASSWORD=123456 -d mysql:latest
 ```
 
 ##### [安装Redis](https://blog.csdn.net/m0_55070913/article/details/126628271)
@@ -2455,6 +2459,19 @@ https://hellosean1025.github.io/yapi
 https://hellosean1025.github.io/yapi/index.html
 ```
 
+## [【微信公众平台】官网](https://mp.weixin.qq.com)
+
+```markdown
+# 公众号-AppID
+设置与开发 | 开发接口管理 | 基本配置 → 账号开发信息 → 开发者ID(AppID)
+# 小程序-AppID
+开发与服务 | 开发管理 → 开发设置 → 开发者ID
+
+# 微信开发工具
+https://developers.weixin.qq.com/miniprogram/dev/devtools/devtools.html
+https://developers.weixin.qq.com/miniprogram/dev/devtools/download.html
+```
+
 # Web开发
 
 ## [【jQuery】官网](https://jquery.com)
@@ -3032,11 +3049,7 @@ http://www.bejson.com
 
 ## 国内镜像
 
-### 华为云镜像
-
-```tex
-https://mirrors.huaweicloud.com
-```
+### [华为云镜像](https://mirrors.huaweicloud.com)
 
 ```markdown
 # 账号密码
