--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -516,7 +516,15 @@ Editor | General | Editor Tabs → 取消勾选 Show tabs in one row(选择 Mult
 Editor | General | Console → Default Encoding → 设UTF-8
 
 # 全局编码、项目编码、属性文件的默认编码
-Editor | File Encodings → Global Encoding、Project Encoding、Default encoding for properties files → 设UTF-8
+Editor | File Encodings → Global Encoding
+                        → Project Encoding
+                        → Default encoding for properties files
+                          全部设为 UTF-8
+                        → Transparent native-to-ascii conversion
+                          [√] 在 .properties 文件中输入非 ASCII 字符时，会自动将这些字符转换为 Unicode 转义序列
+                              如：爪哇 → 转义：\u722a\u54c7
+                          [×] 文件会以原始编码(上述设置的 UTF-8)保存，直接显示非 ASCII 字符
+                              如：爪哇 → 原始编码：爪哇
 ```
 
 ##### * 序列化设置
