--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6487,6 +6487,8 @@ systemctl restart firewalld
 systemctl enable firewalld
 # 防火墙服务 取消开机[自动运行]
 systemctl disable firewalld
+# 防火墙服务 自动运行[状态]
+systemctl is-enabled firewalld
 
 # 打开防火墙端口
 1) 示例打开8848端口
