--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -355,6 +355,9 @@ IDEA highlighting level → All Problems	检查所有error/warning
 * Fitten Code					非十Ai助手 (Ctrl + Alt + C)
 								https://code.fittentech.com/#download
 
+* Translation					翻译插件
+								打开对话框 -> [Ctrl + Shift + ,]
+
 * Apipost-Helper-2.0			接口测试开发工具
 								在 File | Settings | Keymap → Plugins 设置快捷键
 								  Search in ApiTree → [Ctrl + Alt + ,]
@@ -363,11 +366,11 @@ IDEA highlighting level → All Problems	检查所有error/warning
 RestfulToolkit					(已经停止更新)
 								https://idea.javaguide.cn/plugins/rest
 
-* CodeGlance					代码迷你缩放
+* Rainbow Brackets				括号成对配色
 
-* SonarLint						修复代码质量和代码安全问题
+* Lombok						自动生成getter、setter、equals、hash等方法
 
-Grep Console					控制台输出管理
+* JsonFormat					Json格式 快速转换为 实体类
 
 * MyBatisX						快速定位到xml文件
 								https://plugins.jetbrains.com/plugin/10119-mybatisx/versions
@@ -382,6 +385,16 @@ Bytecode Viewer					Show Bytecode
 
 AspectJ							Java Compiler
 
+* CodeGlance					代码迷你缩放
+
+* SonarLint						修复代码质量和代码安全问题
+
+Alibaba Java Coding Guidelines	阿里巴巴规约(代码扫描插件)
+
+WakaTime						时间跟踪(GitHub账号授权)
+
+Grep Console					控制台输出管理
+
 Maven Helper					Maven依赖冲突管理插件
                                   点击 Dependency Analyze(在 pom文件 左下角 → Text右边)
 
@@ -389,27 +402,24 @@ Maven Search					搜索Maven依赖
                                   点击 Tools → Maven Search
                                   或者 Ctrl + Shift + M
 
+IdeaVim							模拟vim插件
+								配置文件 → ..\document\01\Tools\.ideavimrc
+
+Key Promoter X					快捷键提示
+
 EasyApi							零代码入侵，生成接口文档
 								https://apifox.com/apiskills/using-easyapi/
 
 Easy Javadoc					快速生成类、方法、属性等中文注释
 								https://blog.csdn.net/ruoshuiyx/article/details/128255088
 
-IdeaVim							模拟vim插件
-								配置文件 → ..\document\01\Tools\.ideavimrc
-
-JPA Buddy						JPA可视化设计器和组件面板
-
-Key Promoter X					快捷键提示
-
-* Translation					翻译插件
-								打开对话框 -> [Ctrl + Shift + ,]
+GitToolBox						行内显示代码修改者信息
 
 Gitee							便于创建仓库
 
 .ignore							忽略不必要提交的文件
 
-* Lombok						自动生成getter、setter、equals、hash等方法
+JPA Buddy						JPA可视化设计器和组件面板
 
 Zoolytic - Zookeeper tool		Zookeeper可视化管理插件
 
