--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -648,9 +648,8 @@ https://baijiahao.baidu.com/s?id=1604210855080150766&wfr=spider&for=pc
 
 ## [【Apache】官网](https://www.apache.org)
 
-### # 产品下载
-
-```tex
+```markdown
+# 产品下载
 https://downloads.apache.org
 ```
 
@@ -791,6 +790,19 @@ https://dubbo.apache.org/zh/docs/v3.0/references/configuration/api
 
 # v2.7
 https://dubbo.apache.org/zh/docs/v2.7/user/configuration/api
+```
+
+### [# ShardingSphere](https://shardingsphere.apache.org/)
+
+```markdown
+# 下载地址
+https://shardingsphere.apache.org/document/current/en/downloads
+# 往期版本
+https://archive.apache.org/dist/shardingsphere
+# 解压包 → 如下
+apache-shardingsphere-5.2.1-shardingsphere-proxy-bin.tar.gz
+# PDF
+https://shardingsphere.apache.org/document/5.2.1/cn/overview
 ```
 
 ### # 账号密码
