--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -134,6 +134,14 @@ outta_touch@163.com
 同[电话号码]
 # 密码
 what.0414
+# 更新安全问题
+[Win + R] → ms-cxh://setsqsalocalonly
+第一个宠物的名字是什么?
+HuiHui
+你孩童时期的昵称是什么?
+LeiYu
+你的母校名称是什么?
+WangLiuYiXiao
 
 # 账户2 (注销)
 1770282632@qq.com
